[master] search element 변경 및 addstar

--- a/src/Components/Search/SearchContainer.css
+++ b/src/Components/Search/SearchContainer.css
@@ -8,6 +8,12 @@
     width: 500px;
     margin: 10px auto;
 }
+.search-input {
+    width: 300px;
+    border: 1px solid #ccc;
+    height: 32px;
+    border-radius: 4px;
+}
 
 .search-list {
     text-align: left;
